<resources>
    <string name="app_name">Type</string>
    <string name="play_button">PLAY</string>
    <string name="statistics_button">SCORES</string>
    <string name="about_button">ABOUT</string>
    <string name="hint_in_scores">Tap your name to see more statistics</string>
    <string name="button_start_game">start game!</string>
    <string name="warning_before_game"> BE CAREFUL, WATCH THE TRAFFIC!\nGET BONUS POINTS FOR WALKING, TILTING OR TAKING TRANSPORT!</string>
    <string name="hint_to_tap_name">tap your name to see more statistics</string>
    <string name="hint_to_delete_item">tap a name to delete or press back button</string>
    <string name="common_info">
        This game is designed to improve your typing performace.\n\n
        In the background it recognizes what are you doing during the game:\n
        sitting, walking, tilting, running or using transport.\n\n

        You have to type words as fast as you can.\n\n
        You can challenge other players and get more points by moving yourself during the game.\n\n\n\n\n

        Game was made by Daniil Rabizo.
    </string>
    <string name="about">ABOUT</string>
    <string name="content_description_back_button">back button</string>
    <string name="your_name">your name</string>
    <string name="save_button">SAVE</string>
    <string name="empty_hint">_</string>
    <string name="conten_description_logo_image">logo image</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="choose_item_to_delete_or_press_back">choose item to delete or press back</string>
    <string name="HAVE_YOU_BEEN_IN_TRANSPORT">HAVE YOU BEEN IN TRANSPORT?</string>
    <string name="bus">bus</string>
    <string name="car_passenger">car passenger</string>
    <string name="train">train</string>
    <string name="tram">tram</string>
    <string name="u_bahn">u-bahn</string>
    <string name="no">no</string>
    <string name="context">context</string>
    <string name="keys_per_minute">keys per minute</string>
    <string name="accuracy">accuracy</string>
    <string name="game_number">game number</string>
    <string name="most_missed_key">most missed key</string>
    <string name="time_of_the_game">time of the game</string>
</resources>
