<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.TransportAskingActivity">

    <TextView
        android:id="@+id/textViewTransport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"

        android:fontFamily="sans-serif-smallcaps"
        android:paddingBottom="5dp"
        android:paddingTop="0dp"
        android:text="@string/HAVE_YOU_BEEN_IN_TRANSPORT"
        android:textAlignment="center"
        android:textColor="@color/menuButtonColor"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonBus"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textViewTransport"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bus"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTrain"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/buttonBus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/train"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTram"
        android:layout_width="175dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/buttonTrain"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/tram"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCar"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/buttonTram"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/car_passenger"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonUbahn"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/buttonCar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/u_bahn"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/buttonUbahn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>