<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuScreenRelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="0dp"
    android:background="@drawable/white_background"
    tools:context=".View.MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_alignBottom="@+id/playButton"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/conten_description_logo_image"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="204dp"
            android:layout_height="62dp"
            android:layout_alignBottom="@id/scoresButton"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menuTextItemColor"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="openGameActivity"
            android:text="@string/play_button"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="328dp" />

        <Button
            android:id="@+id/scoresButton"
            android:layout_width="204dp"
            android:layout_height="62dp"
            android:layout_alignBottom="@+id/aboutButton"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/menuTextItemColor"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="openScoresActivity"
            android:text="@string/statistics_button"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="415dp" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="204dp"
            android:layout_height="62dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="openAboutActivity"
            android:text="@string/about_button"
            android:textColor="@color/menuTextItemColor"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="494dp" />

        <TextView
            android:id="@+id/textViewMaxScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-120dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/empty_hint"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:textSize="20sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>