<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:clickable="false"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="280dp"
        android:layout_height="123dp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView4"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/context"
        android:textColor="@color/listItemColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/keys_per_minute"
        android:textColor="@color/listItemColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/textViewGame"
        android:layout_below="@+id/textViewGame"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/accuracy"
        android:textColor="@color/listItemColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewGame"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/game_number"
        android:textColor="@color/listItemColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewGameNumber"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textViewGame"
        android:layout_marginTop="0dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="0dp"
        android:paddingBottom="10dp"

        android:paddingTop="10dp"

        android:textAlignment="center"
        android:textColor="@color/listItemColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewKPM2"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="0dp"
        android:paddingBottom="0dp"

        android:paddingTop="0dp"

        android:textAlignment="center"
        android:textColor="@color/listItemColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewAccuracy3"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewGameNumber"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="0dp"
        android:textColor="@color/listItemColor"
        android:paddingBottom="0dp"

        android:paddingTop="0dp"

        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/listItemColor" />

    <TextView
        android:id="@+id/textViewContext"
        android:layout_width="132dp"
        android:layout_height="124dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView6"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"

        android:textAlignment="center"
        android:textColor="@color/listItemColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/textView6"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/most_missed_key"
        android:textColor="@color/listItemColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMostMissedKey"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView70"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"

        android:textAlignment="center"
        android:textColor="@color/listItemColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/textView70"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="@string/time_of_the_game"
        android:textColor="@color/listItemColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView70"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical"
        android:padding="0dp"

        android:textAlignment="center"
        android:textColor="@color/listItemColor"
        android:textSize="20sp" />

</RelativeLayout>